--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"laravelcollective/html": "5.0",
-		"intervention/image": "^2.3"
+		"laravelcollective/html": "5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
